; ModuleID = '/home/carl/AnghaBench/libgit2/tests/object/tag/extr_parse.c_assert_tag_fails.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/object/tag/extr_parse.c_assert_tag_fails.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OBJECT_TAG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @assert_tag_fails to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_tag_fails(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i64, i64* %4, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i8*, i8** %3, align 8
  %10 = call i64 @strlen(i8* %9)
  store i64 %10, i64* %4, align 8
  br label %11

11:                                               ; preds = %8, %2
  %12 = load i8*, i8** %3, align 8
  %13 = load i64, i64* %4, align 8
  %14 = load i32, i32* @GIT_OBJECT_TAG, align 4
  %15 = call i32 @git_object__from_raw(i32** %5, i8* %12, i64 %13, i32 %14)
  %16 = call i32 @cl_git_fail(i32 %15)
  ret void
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_object__from_raw(i32**, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
